# ELite_UROP

./: CMakeLists.txt
config/: parkinglot.yaml  parkinglot_first.yaml
dynamic_removal/: map_remover.py
include/: height_filter.h
python/: print.py  profile.prof  profile2.prof  profile_fast_gicp.prof  profile_pygicp.prof
python/alignment/matcher/: fast_gicp_scan_matcher.py
python/dynamic_removal/: map_remover.py  map_remover_base.py
python/examples/: height_filter_test.py
python/utils/: session.py
python/utils/utils_cuda/: Makefile  bindings.cpp  kernels.cu  session.py  test.py
python/utils/utils_cuda/test/: poses.txt
src/: bindings.cpp  height_filter.cpp
text/: noneffect+chunking_18s_voxel=0.1  noneffect+chunking_8s_voxel=0.2  noneffect_22s  remover_base_time1,2,3 (24s)  remover_base_time1,2,3_kdtree_sequential (37s)
